--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
 	"name": "Ampere",
-	"version": "1.0.2",
+	"version": "1.0.3",
 	"description": "made out of hours I could have spent studying",
-	"main": "bot.js",
+	"main": "index.js",
 	"author": "hypa_bl",
 	"scripts": {
 		"start": "node bot.js"
