--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Ampere",
   "engines": {
-    "node": "10.15.3"
+    "node": "12.0.0"
   },
   "version": "1.4.8",
   "description": "made out of hours I could’ve spent studying",
@@ -11,7 +11,8 @@
     "start": "node ampere.js"
   },
   "dependencies": {
-    "discord.js": "^11.5.1",
+    "dotenv": "8.2.0",
+    "discord.js": "^12.3.0",
     "express": "^4.17.1",
     "eslint": "^6.8.0",
     "moment": "^2.24.0",
